# RV1106-RTL8723D-HFP

./: .gitignore  ARCHIVE_OTHER_REPO.md  CONSOLIDATION_PLAN.md  INCOMPLETE_STATUS.md  LICENSE  MACOS_DEPLOYMENT_GUIDE.md  MINIMAL_SOLUTION.md  OFONO_BUILD_GUIDE.md  PROJECT_STATUS.md  README.md  RTL8723D-Fix-Original-README.md  SOLUTION_SUMMARY.md  WEEKEND_PLAN.md  check_bt_gpio.sh  codespaces_build_ofono.sh  codespaces_build_ofono_fixed.sh  codespaces_simple_hfp_fix.sh  final_bt_solution.sh  final_working_solution.sh  fix_bluetooth_complete.sh  hfp_solution_without_ofono.sh  power_cycle_fix.sh  recreate_pdf_setup.sh  rtkhci_high_baud.sh  setup.sh  setup_ofono_bluealsa.sh  setup_ofono_hfp.sh  use_our_rtk_hciattach.sh  use_rtkhci_from_pdf.sh  working_bluetooth_setup.sh
BlueFusion/: README.md  pyproject.toml
BlueFusion/src/analyzers/: __init__.py  hex_pattern_matcher.py  packet_inspector.py
BlueFusion/src/analyzers/protocol_parsers/: __init__.py  base.py  gatt.py
BlueFusion/src/api/: classic_routes.py  fastapi_server.py
BlueFusion/src/classic/: README.md  __init__.py
BlueFusion/src/interfaces/: auto_connect_manager.py  base.py  ble_errors.py  channel_hopper.py  classic_base.py  macbook_ble.py  security_manager.py  sniffer_dongle.py
BlueFusion/src/ui/: __init__.py  characteristic_monitor.py  client.py  connection_diagnostics.py  data_models.py  data_processing.py  gradio_interface.py  interface_handlers.py  packet_inspector_ui.py  security_handlers.py  service_explorer_ui.py  visualization.py  websocket_handler.py
BlueFusion/src/utils/: serial_utils.py
(+95 files in other folders)
